--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,11 @@
 body {
   background-color: var(--white-color);
   font-family: "Roboto", sans-serif;
-  color: var(--navyblue-collor);
+  color: #434455;
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
-header {
-  border: 1px solid var(--cornflower-collor);
-}
+
 footer {
   background-color: var(--navyblue-collor);
 }
@@ -37,22 +35,46 @@ address {
 ul {
   list-style-type: none;
 }
-h1 {
+.header-1 {
   font-weight: 700;
   font-size: 56px;
-  letter-spacing: 2%;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #ffffff;
 }
-h2 {
+.header-2 {
   font-weight: 700;
   font-size: 36px;
-  letter-spacing: 2%;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
-h3 {
+.header-3 {
   font-weight: 500;
   font-size: 20px;
-  letter-spacing: 2%;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.basement {
+  background-color: var(--gray-color);
 }
 /* page index */
+.list {
+  list-style: none;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate-collor);
+}
+.list-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate-collor);
+}
 .section-solution {
   background-color: var(--navyblue-collor);
   color: var(--white-color);
@@ -60,62 +82,68 @@ h3 {
 .section-our-team {
   background-color: var(--cloud-collor);
 }
-
+.our-team-list {
+  background-color: #ffffff;
+}
 /* page portfolio */
 .text-small {
   font-size: 12px;
   line-height: 1.167;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
 }
 .text-medium {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
 .text-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
 }
 .text-link {
   text-decoration: underline;
   font-size: 12px;
   line-height: 1.333;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
 }
 
+.link {
+  text-decoration: none;
+  color: var(--iris-collor);
+}
 .logo-text {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--navyblue-collor);
 }
 .span-logo {
-  color: var(--iris-collor);
+  color: var(--navyblue-collor);
 }
 .filter-button {
-  padding-left: 32px;
-  padding-right: 32px;
-  height: 48px;
   background-color: var(--iris-collor);
   color: var(--white-color);
-  border-radius: 4px;
-  border-width: 0px;
+  cursor: pointer;
 }
 .filter-button:hover,
 .filter-button:focus {
-  padding-left: 32px;
-  padding-right: 32px;
-  height: 48px;
   background-color: var(--ocean-collor);
   color: var(--white-color);
-  border-radius: 4px;
-  border-width: 0px;
 }
-.nav-text:hover,
-.nav-text:focus {
+.nav-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--navyblue-collor);
+}
+.link:hover,
+.link:focus {
   color: var(--ocean-collor);
   text-decoration: underline;
 }
@@ -124,9 +152,13 @@ h3 {
   color: var(--ocean-collor);
   text-decoration: underline;
 }
-footer .logo-text {
-  color: var(--white-color);
+.footer-text {
+  color: var(--cloud-collor);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
-footer p {
+.footer-span-logo {
   color: var(--white-color);
 }
