--- a/css/style.css
+++ b/css/style.css
@@ -19,23 +19,12 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
-footer {
-  background-color: var(--navyblue-collor);
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-address {
+.nav-address {
   font-family: inherit;
   font-style: inherit;
   color: var(--slate-collor);
 }
-ul {
-  list-style-type: none;
-}
-.header-1 {
+.head-1 {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -43,7 +32,7 @@ ul {
   text-align: center;
   color: #ffffff;
 }
-.header-2 {
+.head-2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -51,12 +40,14 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   letter-spacing: 0.02em;
+  color: var(--gray-color);
 }
-.header-3 {
+.head-3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--gray-color);
 }
 .basement {
   background-color: var(--gray-color);
@@ -97,22 +88,14 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.text-button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-}
 .text-link {
   text-decoration: underline;
   font-size: 12px;
   line-height: 1.333;
   letter-spacing: 0.04em;
 }
-
 .link {
   text-decoration: none;
-  color: var(--iris-collor);
 }
 .logo-text {
   font-family: "Raleway", sans-serif;
@@ -121,9 +104,17 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: var(--iris-collor);
 }
 .span-logo {
   color: var(--navyblue-collor);
+}
+.text-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 .filter-button {
   background-color: var(--iris-collor);
@@ -160,5 +151,5 @@ ul {
   letter-spacing: 0.02em;
 }
 .footer-span-logo {
-  color: var(--white-color);
+  color: var(--cloud-collor);
 }
