--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,11 @@ body {
   letter-spacing: 0.02em;
 }
 .nav-address {
-  font-family: inherit;
-  font-style: inherit;
+  font-style: normal;
+  color: var(--slate-collor);
+}
+.address-link {
+  text-decoration: none;
   color: var(--slate-collor);
 }
 .head1 {
@@ -49,19 +52,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--gray-color);
 }
-.list {
-  list-style: none;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate-collor);
-}
-.list-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate-collor);
-}
+
 .section-solution {
   background-color: var(--navyblue-collor);
   color: var(--white-color);
@@ -78,13 +69,7 @@ body {
   line-height: 1.333;
   letter-spacing: 0.04em;
 }
-.link {
-  text-decoration: none;
-}
-.address-link {
-  text-decoration: none;
-  color: var(--slate-collor);
-}
+
 .logo-text {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -130,6 +115,23 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navyblue-collor);
+}
+.list {
+  list-style: none;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate-collor);
+}
+.list-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--slate-collor);
+}
+.link {
+  color: inherit;
+  text-decoration: none;
 }
 .link:hover,
 .link:focus {
