--- a/css/style.css
+++ b/css/style.css
@@ -109,18 +109,9 @@ body {
   background-color: var(--ocean-collor);
   color: var(--white-color);
 }
-.nav-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navyblue-collor);
-}
+
 .list {
   list-style: none;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--slate-collor);
 }
 .list-text {
@@ -130,10 +121,24 @@ body {
   color: var(--slate-collor);
 }
 .link {
-  color: inherit;
   text-decoration: none;
 }
-.link:hover,
+.nav-address .list a {
+  color: var(--slate-collor);
+}
+.nav-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--navyblue-collor);
+}
+.nav-address .list .link:hover,
+.nav-address .list .link:focus {
+  color: var(--ocean-collor);
+  text-decoration: underline;
+}
+.list .link:hover,
 .link:focus {
   color: var(--ocean-collor);
   text-decoration: underline;
